[package]
name = "ncmdump-bin"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

description = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }

[[bin]]
name = "ncmdump"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "^4.1", features = ["derive"] }
crossbeam-channel = "^0.5"
indicatif = { version = "^0.17", features = ["improved_unicode"] }
thiserror = { workspace = true }
ncmdump = { workspace = true }
metaflac = "0.2.5"
id3 = "1.9.0"
walkdir = "2.5.0"
